test/bad/6.cc
#include <string>

using std::string;

int main()
{
    string x, y, z;
    if (x == z)
    {
        int a = 4;
    }
    else
    {
        int b = 5;
        return a;
    }
    return 0;
}